samples/_failures_safe/1761367820_792f1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83aed887.c: In function ‘main’:
./samples/SAFE/__tmp_83aed887.c:168:9: error: expected declaration or statement at end of input
  168 |         execute_graph_operation(&graph, operations[i], 0, 0);
      |         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83aed887.c:168:9: error: expected declaration or statement at end of input
